<resources>
    <string name="app_name">El Menu</string>
    <string name="please_wait">Please Wait …</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="item_name">Name</string>
    <string name="item_desc">Desc</string>
    <string name="item_cost">Cost</string>
    <string name="image_desc">Image Desc</string>
    <string name="switch_menu">Switch</string>
    <string name="refresh_menu">Refresh</string>
    <string name="sort_menu">Sort</string>
    <string name="sort_from_a_to_z">Sort from A to Z</string>
    <string name="sort_by_price_lower">Sort by price(Lower)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linear_view">Linear View</string>
    <string name="grid_view">Grid View</string>
    <string name="food_image">Food Image</string>
    <string name="meal_price">Meal Price</string>
    <string name="meal_desc">Meal Desc</string>
    <string name="your_image">Your image is here.</string>
</resources>
